[gd_scene load_steps=5 format=3 uid="uid://bm8psoo46ynji"]

[ext_resource type="Script" path="res://scenes/Game.gd" id="1_jjgvl"]
[ext_resource type="PackedScene" uid="uid://603kjm8ep4el" path="res://scenes/GameStatus.tscn" id="1_ta8j1"]
[ext_resource type="Script" path="res://scenes/Board.gd" id="2_omwm6"]
[ext_resource type="PackedScene" uid="uid://dnjmbypjm607j" path="res://scenes/Menu.tscn" id="4_30kw4"]

[node name="Game" type="Node2D"]
script = ExtResource("1_jjgvl")

[node name="GameStatus" parent="." instance=ExtResource("1_ta8j1")]
visible = false

[node name="Board" type="Node2D" parent="."]
visible = false
script = ExtResource("2_omwm6")

[node name="Timer" type="Timer" parent="."]

[node name="Menu" parent="." instance=ExtResource("4_30kw4")]

[connection signal="game_over" from="." to="." method="_on_game_over"]
[connection signal="level_complete" from="." to="." method="_on_level_complete"]
[connection signal="match_found" from="Board" to="." method="_on_board_match_found"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="start_game" from="Menu" to="." method="_on_menu_start_game"]
